# wavefront

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE.md  README.md  VALIDATION.md
.github/workflows/: ci.yml
benchmarks/: plot_halo_fix_before_after.py  plot_thread_scaling.py  snapshot_throughput.sh  thread_scaling.csv  thread_scaling.sh  thread_scaling_before_fix.csv
examples/: convergence_study.rs  pml_reflection_study.rs
scenes/: two_spheres.scene
src/: engine.rs  fdtd.rs  layout.rs  lib.rs  main.rs  probe.rs  scene.rs  source.rs
validation/: convergence_data.csv  plot_convergence.py  plot_pml_reflection.py  pml_reflection_data.csv
